latest api changes

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "18.x"
   },
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "nodemon index.js"
   },
   "author": "Medisoft",
