--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^16.0.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.1",
-    "fcm-node": "^1.6.1",
+    "firebase-admin": "^13.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
